test/tag/trailing.stderr
error: encountered a closing HTML element "button" without a corresponding opening tag.
 --> test/tag/trailing.rs:8:11
  |
8 |         </button> // <- trailing
  |           ^^^^^^
